--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -37,18 +37,21 @@ pre {
 .rating div.star,
 .rating span.star {
     font-family: Font Awesome\ 5 Free;
+    font-size: 15px;
 }
 
 .rating div.star:before,
 .rating span.star:before {
     content: "\f005";
+   
 }
 
 
 .rating div.star-full,
 .rating span.star-full {
     font-family: Font Awesome\ 5 Free;
-    font-weight: 900
+    font-weight: 900;
+    font-size: 15px;
 }
 
 .rating div.star-empty,
