--- a/.storybook/docs.css
+++ b/.storybook/docs.css
@@ -237,3 +237,9 @@
     color: var(--fg-ui-accent) !important;
     text-decoration: line-through;
 }
+
+.css-qa4clq :where(h2:not(.sb-anchor, .sb-unstyled, .sb-unstyled h2)) {
+    color: var(--fg-ui-heading) !important;
+    border-color: var(--border-default) !important;
+    margin: 20px 0 32px !important;
+}
