--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -77,12 +77,12 @@ pre {
     content: "\f005"
 }
 
-.nav-main .nav-link[data-toggle=collapse]::after {
+/* .nav-main .nav-link[data-toggle=collapse]::after {
     content: "\f138"!important;
     font: normal normal normal 24px / 1 "inject-icons"!important;
     font-size: 1rem!important;;
     line-height: 1rem!important;;
- }
+ } */
 .modal-backdrop{
     display: none;
 }
