add AI chat modal

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -83,6 +83,6 @@ pre {
     font-size: 1rem!important;;
     line-height: 1rem!important;;
  } */
-.modal-backdrop{
+/* .modal-backdrop{
     display: none;
-}
+} */
