--- a/storybook-static/styles/styles.css
+++ b/storybook-static/styles/styles.css
@@ -2,8 +2,8 @@
 @import url('https://demo.schoolab.tools/bundles/starrating/css/rating.css');
 /* @import url('https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/r-2.2.2/datatables.min.css'); */
 @import url('https://cdn.datatables.net/v/bs4/dt-1.13.8/fc-4.3.0/sc-2.3.0/datatables.min.css');
-
-@import '../../../inject-css/css/main.css';
+@import '~@schoolab/inject-css/css/main.css'; 
+/* @import '../../../inject-css/css/main.css'; */
 /* @import './icon.css'; */
 @import '~@schoolab/inject-icons/dist/inject-icons.css'; 
 /* @import '../../../inject-icons/dist/inject-icons.css'; */
